Fix action icons breaking into multiple lines on narrow screens
This is only relevant with the old design. It's only noticable when
a field shows all 3 action icons: info, raw wikitext mode, and
trashcan. The last icon can wrap to the next line when the screen
is very narrow.

I tried to apply nowrap, but this causes other style issues.

Removing the arbitrary width allows the action container to be
as wide as it needs to be. I can't tell why this restriction was
there. It is in no way necessary, as far as I can see. I can only
guess it's a temporary artifact from when the dialog was designed.

Bug: T296730

--- a/modules/ve-mw/ui/styles/pages/ve.ui.MWParameterPage-default.css
+++ b/modules/ve-mw/ui/styles/pages/ve.ui.MWParameterPage-default.css
@@ -32,7 +32,6 @@
 	position: absolute;
 	top: -0.3125em;
 	right: 4em; /* 1.5em for PanelLayout's padding + 2.5em */
-	width: 25%;
 	text-align: right;
 	box-sizing: border-box;
 }
